--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ html {
       padding: 5vh 5vw;
       justify-content: space-start;
 
-      #logo a {
+      a#logo {
         width: 50%;
 
         img {
@@ -330,6 +330,7 @@ html {
               margin-left: 1vw;
             }
           }
+        }
       }
     }
   }
