--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ html {
     font-size: 1.5rem;
     font-weight: 500;
     color: var(--white);
+    position: relative;
 
     img {
       width: 250px;
@@ -79,7 +80,7 @@ html {
       align-items: center;
 
       #hero-banner-text {
-        width: 40%;
+        width: 30%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -100,8 +101,24 @@ html {
       }
 
       img {
-        width: 60%;
-        height: auto;
+        width: 500px;
+        height: 850px;
+        rotate: 15deg;
+        z-index: -1;
+      }
+    }
+
+    #hero-banner-down {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      img:first-of-type {
+        width: 500px;
+        height: 850px;
+        rotate: -15deg;
       }
     }
   }
@@ -112,8 +129,6 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-top: 2px solid var(--black);
-    border-bottom: 2px solid var(--black);
     font-size: 1.25rem;
     padding: 10vh 0;
     font-weight: 500;
@@ -134,6 +149,7 @@ html {
       align-items: center;
       gap: 5vh;
       padding: 10vh 5vw;
+      border: 1px solid var(--black);
 
       &:first-child {
         background-color: var(--yellow);
