--- a/style.css
+++ b/style.css
@@ -359,6 +359,28 @@ html {
     }
   }
 
+  #gallery {
+    border-bottom: 2px solid var(--black);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+
+    .main-image {
+      grid-column: span 2;
+    }
+
+    .grid-item {
+      background-color: #ddd;
+      padding: 10px;
+      text-align: center;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
   #section-try {
     width: 100vw;
     background-color: var(--black);
